# backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Arquitetura_geral.md  Dockerfile.api  Dockerfile.mcp  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  one_fianca_backend_prd_arquitetura_codex_ready (1).md  ops.env.example  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_enable_pgcrypto.py  0002_fase_1_cadastros.py
app/: __init__.py  main.py
app/api/: deps.py  errors.py
app/core/: config.py  constants.py  logging.py  security.py  validators.py
app/db/: base.py  health.py  session.py
app/mcp/: server.py  tools.py
app/schemas/: __init__.py  autenticacao.py  comum.py  corretores.py  imobiliarias.py
app/services/: auditoria_service.py  autenticacao_service.py  corretores_service.py  exceptions.py  imobiliarias_service.py
docs/: API_CONTRACTS.md  ARCHITECTURE.md  DBEAVER_POSTGRES.md  DEPLOYMENT.md
docs/frontend-cadastros/: 01_endpoints_publicos.md  02_schema_imobiliaria.md  03_schema_corretor.md  04_regras_dominios_validacoes.md  README.md
docs/planejamento/: 00_entendimento_do_projeto.md  01_plano_completo.md  02_perguntas_pendentes.md  03_decisoes_confirmadas.md  04_roadmap_fases.md  README.md  (+1 more)
scripts/: bootstrap_admin.py  bootstrap_roles.sql  check_health.sh  check_no_tracked_secrets.sh  check_vps_access.sh  deploy_vps.sh  install_vps_ssh_key.sh  rotate_vps_ssh_key.md
tests/: conftest.py  factories.py  test_admin_api.py  test_config.py  test_health.py  test_mcp_tools.py  test_publico_api.py  test_validators.py
(+10 files in other folders)
