[project]
name = "one-fianca-backend"
version = "0.1.0"
description = "Backend for One Fianca Locaticia."
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.0",
    "fastmcp>=3.3.1",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

